--- a/html-css/module_3/index.html
+++ b/html-css/module_3/index.html
@@ -34,12 +34,13 @@
 
     <main>
       <article class="article-section container">
+        <h1 class="visually-hidden">Collection of articles</h1>
         <ul class="article-list">
-          <li>
+          <li class="article-list-item">
             <article class="article">
               <img src="./img/image1.jpg" alt="Dancing girl" />
-              <p class="heading">Lifestyle</p>
-              <h2 class="headline">More than just a music festival</h2>
+              <p class="article__heading">Lifestyle</p>
+              <h2 class="article__headline">More than just a music festival</h2>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -47,11 +48,11 @@
               </p>
             </article>
           </li>
-          <li>
+          <li class="article-list-item">
             <article class="article">
               <img src="./img/image2.jpg" alt="Cup of coffee" />
-              <p class="heading">Lifestyle</p>
-              <h2 class="headline">Life tastes better with coffee</h2>
+              <p class="article__heading">Lifestyle</p>
+              <h2 class="article__headline">Life tastes better with coffee</h2>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -59,11 +60,11 @@
               </p>
             </article>
           </li>
-          <li>
+          <li class="article-list-item">
             <article class="article">
               <img src="./img/image3.jpg" alt="Greeting girls" />
-              <p class="heading">Photodiary</p>
-              <h2 class="headline">American dream</h2>
+              <p class="article__heading">Photodiary</p>
+              <h2 class="article__headline">American dream</h2>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -71,11 +72,11 @@
               </p>
             </article>
           </li>
-          <li>
+          <li class="article-list-item">
             <article class="article">
               <img src="./img/image4.jpg" alt="Traveler" />
-              <p class="heading">Photodiary</p>
-              <h2 class="headline">A day exploring the Alps</h2>
+              <p class="article__heading">Photodiary</p>
+              <h2 class="article__headline">A day exploring the Alps</h2>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -83,11 +84,11 @@
               </p>
             </article>
           </li>
-          <li>
+          <li class="article-list-item">
             <article class="article">
               <img src="./img/image5.jpg" alt="girl" />
-              <p class="heading">Lifestyle</p>
-              <h2 class="headline">Top 10 songs for running</h2>
+              <p class="article__heading">Lifestyle</p>
+              <h2 class="article__headline">Top 10 songs for running</h2>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -95,11 +96,11 @@
               </p>
             </article>
           </li>
-          <li>
+          <li class="article-list-item">
             <article class="article">
               <img src="./img/image6.jpg" alt="winter road" />
-              <p class="heading">Lifestyle</p>
-              <h2 class="headline">Cold winter days</h2>
+              <p class="article__heading">Lifestyle</p>
+              <h2 class="article__headline">Cold winter days</h2>
               <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
