--- a/html-css/module_4/index.html
+++ b/html-css/module_4/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400,700,900"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,400,700,900"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
@@ -26,6 +26,7 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section class="featured-products container">
         <h1 class="visually-hidden">Main page</h1>
@@ -150,24 +151,42 @@
       <section class="latest-news container">
         <h2 class="section-headline">Latest news</h2>
         <div class="latest-news-wrapper">
-          <ul class="latest-news-list">
-            <li class="latest-news-item">
-              <img src="" alt="" />
-              <p></p>
-              <p></p>
-              <button></button>
+          <ul class="latest-news-list clearfix">
+            <li class="latest-news-item latest-news-item1">
+              <img src="./img/news1.jpg" alt="Map on tablet" />
+              <p class="news-heading">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+              </p>
+              <p class="news-text">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+                Nam nec tellus a odio tincidunt
+              </p>
+              <button class="read-more-button">Read more</button>
             </li>
-            <li class="latest-news-item">
-              <img src="" alt="" />
-              <p></p>
-              <p></p>
-              <button></button>
+            <li class="latest-news-item latest-news-item2">
+              <img src="./img/news2.jpg" alt="Students girl" />
+              <p class="news-heading">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+              </p>
+              <p class="news-text">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+                Nam nec tellus a odio tincidunt
+              </p>
+              <button class="read-more-button">Read more</button>
             </li>
-            <li class="latest-news-item">
-              <img src="" alt="" />
-              <p></p>
-              <p></p>
-              <button></button>
+            <li class="latest-news-item latest-news-item3">
+              <img src="./img/news3.jpg" alt="Driving bus" />
+              <p class="news-heading">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+              </p>
+              <p class="news-text">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+                Nam nec tellus a odio tincidunt
+              </p>
+              <button class="read-more-button">Read more</button>
             </li>
           </ul>
         </div>
