delete some useless code

--- a/html-css/module_4/index.html
+++ b/html-css/module_4/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header class="header container">
-      <nav class="site-navigation">
+      <nav class="site-navigation clearfix">
         <a href="#" class="site-logo"><span>M</span>art</a>
         <ul class="site-navigation-menu clearfix">
           <li class="nav-item nav-item1"><a href="">Home</a></li>
@@ -31,165 +31,161 @@
       <section class="featured-products container">
         <h1 class="visually-hidden">Main page</h1>
         <h2 class="section-headline">Featured products</h2>
-        <div class="featured-products-wrapper">
-          <ul class="list-item clearfix">
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product1.png"
-                    alt="Blue women shoe"
-                  />
-                </div>
-                <div class="product-name">Blue women shoe</div>
-                <div class="product-price">$26</div>
-              </a>
-            </li>
+        <ul class="list-item clearfix">
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product1.png"
+                  alt="Blue women shoe"
+                />
+              </div>
+              <div class="product-name">Blue women shoe</div>
+              <div class="product-price">$26</div>
+            </a>
+          </li>
 
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product2.png"
-                    alt="Men belt"
-                  />
-                </div>
-                <div class="product-name">Men belt</div>
-                <div class="product-price">$31</div>
-              </a>
-            </li>
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product2.png"
+                  alt="Men belt"
+                />
+              </div>
+              <div class="product-name">Men belt</div>
+              <div class="product-price">$31</div>
+            </a>
+          </li>
 
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product3.png"
-                    alt="Men hat"
-                  />
-                </div>
-                <div class="product-name">Men hat</div>
-                <div class="product-price">$21</div>
-              </a>
-            </li>
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product3.png"
+                  alt="Men hat"
+                />
+              </div>
+              <div class="product-name">Men hat</div>
+              <div class="product-price">$21</div>
+            </a>
+          </li>
 
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product4.png"
-                    alt="Women purse"
-                  />
-                </div>
-                <div class="product-name">Women purse</div>
-                <div class="product-price">$56</div>
-              </a>
-            </li>
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product4.png"
+                  alt="Women purse"
+                />
+              </div>
+              <div class="product-name">Women purse</div>
+              <div class="product-price">$56</div>
+            </a>
+          </li>
 
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product5.png"
-                    alt="Black women handbag"
-                  />
-                </div>
-                <div class="product-name">Women handbag</div>
-                <div class="product-price">$26</div>
-              </a>
-            </li>
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product5.png"
+                  alt="Black women handbag"
+                />
+              </div>
+              <div class="product-name">Women handbag</div>
+              <div class="product-price">$26</div>
+            </a>
+          </li>
 
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product6.png"
-                    alt="Black belt"
-                  />
-                </div>
-                <div class="product-name">Black belt</div>
-                <div class="product-price">$31</div>
-              </a>
-            </li>
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product6.png"
+                  alt="Black belt"
+                />
+              </div>
+              <div class="product-name">Black belt</div>
+              <div class="product-price">$31</div>
+            </a>
+          </li>
 
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product7.png"
-                    alt="Men shoes"
-                  />
-                </div>
-                <div class="product-name">Men shoes</div>
-                <div class="product-price">$21</div>
-              </a>
-            </li>
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product7.png"
+                  alt="Men shoes"
+                />
+              </div>
+              <div class="product-name">Men shoes</div>
+              <div class="product-price">$21</div>
+            </a>
+          </li>
 
-            <li class="products-item">
-              <a href="#" class="product-link">
-                <div class="product-bg">
-                  <img
-                    class="product-image"
-                    src="./img/product8.png"
-                    alt="Pink sunglasses"
-                  />
-                </div>
-                <div class="product-name">Pink sunglasses</div>
-                <div class="product-price">$56</div>
-              </a>
-            </li>
-          </ul>
-        </div>
+          <li class="products-item">
+            <a href="#" class="product-link">
+              <div class="product-bg">
+                <img
+                  class="product-image"
+                  src="./img/product8.png"
+                  alt="Pink sunglasses"
+                />
+              </div>
+              <div class="product-name">Pink sunglasses</div>
+              <div class="product-price">$56</div>
+            </a>
+          </li>
+        </ul>
       </section>
 
       <section class="latest-news container">
         <h2 class="section-headline">Latest news</h2>
-        <div class="latest-news-wrapper">
-          <ul class="latest-news-list clearfix">
-            <li class="latest-news-item latest-news-item1">
-              <img src="./img/news1.jpg" alt="Map on tablet" />
-              <p class="news-heading">
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </p>
-              <p class="news-text">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt
-              </p>
-              <button class="read-more-button">Read more</button>
-            </li>
-            <li class="latest-news-item latest-news-item2">
-              <img src="./img/news2.jpg" alt="Students girl" />
-              <p class="news-heading">
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </p>
-              <p class="news-text">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt
-              </p>
-              <button class="read-more-button">Read more</button>
-            </li>
-            <li class="latest-news-item latest-news-item3">
-              <img src="./img/news3.jpg" alt="Driving bus" />
-              <p class="news-heading">
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </p>
-              <p class="news-text">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt
-              </p>
-              <button class="read-more-button">Read more</button>
-            </li>
-          </ul>
-        </div>
+        <ul class="latest-news-list clearfix">
+          <li class="latest-news-item latest-news-item1">
+            <img src="./img/news1.jpg" alt="Map on tablet" />
+            <p class="news-heading">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </p>
+            <p class="news-text">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt
+            </p>
+            <button class="read-more-button">Read more</button>
+          </li>
+          <li class="latest-news-item latest-news-item2">
+            <img src="./img/news2.jpg" alt="Students girl" />
+            <p class="news-heading">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </p>
+            <p class="news-text">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt
+            </p>
+            <button class="read-more-button">Read more</button>
+          </li>
+          <li class="latest-news-item latest-news-item3">
+            <img src="./img/news3.jpg" alt="Driving bus" />
+            <p class="news-heading">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </p>
+            <p class="news-text">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt
+            </p>
+            <button class="read-more-button">Read more</button>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
